[package]
name = "aba-cache"
version = "0.1.0"
authors = ["Arief Bastian HB <ariefbastian@gmail.com>"]
edition = "2018"
description = "Embedded in-memory cache library"
homepage = "https://github.com/abastian/aba-cache"
repository = "https://github.com/abastian/aba-cache.git"
readme = "README.md"
license = "MIT"
keywords = ["cache", "in-memory", "embedded"]

[features]
default = ["asynchronous"]
asynchronous = ["tokio"]

[dependencies]
slab = "0.4"
tokio = { version = "0.2", features = ["sync", "time"], optional = true }

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "rt-core"] }