[package]
name = "aba-cache"
version = "0.2.0-SNAPSHOT"
authors = ["Arief Bastian HB <ariefbastian@gmail.com>"]
edition = "2018"
description = "In-process in-memory cache library"
homepage = "https://github.com/abastian/aba-cache"
repository = "https://github.com/abastian/aba-cache.git"
readme = "README.md"
license = "MIT"
keywords = ["cache", "in-memory", "in-process", "async"]

[features]
default = ["asynchronous"]
asynchronous = ["tokio"]

[dependencies]
slab = "0.4"
tokio = { version = "0.2", features = ["sync", "time"], optional = true }

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "rt-core"] }
serde_json = { version = "1.0" }

[package.metadata."docs.rs"]
all-features = true
